Checking in patch from tenthumbs@cybernex.net to fix bug 202543. Eliminating useless assertions and speeding things up a bit. r=bzbarsky@mit.edu, sr=jst@netscape.com.